# business-ideas

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  readme.md
.sqlx/: query-16be0bf0c5ef53868c0ca9704731dcf94a47085081b22dc10562f2f93da9f21b.json  query-1ae5136aca12b2b15cc8c9bc671eb92de51ee691d25abd7e26e6fa1bae2bf81e.json  query-21ce5639f8ed93ab9326526922d68f7a7f5dd23c3f35b460c831f6e1afb8117e.json  query-33b7b4def04fc5b48b41da246e901b464d7b4a8c34e28af66fcbbb56af71e972.json  query-539e1cf7376c1f989854b568a0023f857bfbe611b8f66befd6497a1be220b7c9.json  query-55f374055346222a7b3d8932aea2fd52381258523917b9d2aaee010988e2bb55.json  query-782b8905204c13adf783be532bf188ce15ea9ebe8f5573a9be678206cc013519.json  query-79a0786b83400b9682be3a99a078b2d454f60db765d47c99e9427ee2299957d6.json  query-8dcfcb6f5d5d882b007337c70978a4b9a6e7e7d9d539e09e0932e476bb14e7c3.json  query-9fbc07509b8caeccc9af812bb7e10ff9f70b0199349ac49381662c255d952823.json  query-9fcb1a8daae627ca92055dc124ce6629b1ad86ff63c8230a168a60d528da06e3.json  query-b614146f5efce00a48e6c356c0e7280aafd766509cbad5ecc4431d1a0f3733e2.json  query-cd48034e8bf5ac16571f34bb977c92b118b9ff12ed4781e1f84b96520ca276f1.json  query-cdf7ed3ea0742a13b31caf30c307adb2230b9a15fe51d3e770edd68ea77fc319.json  query-f2f3fc90fd03f151be5dda3c6d9c0529c47434d726fd44fe3107da36afe5f1bc.json
migrations/: 20240918112803_create_short_link.down.sql  20240918112803_create_short_link.up.sql  20240918154854_create_landing_page.down.sql  20240918154854_create_landing_page.up.sql  20240919124101_create_message.down.sql  (+3 more)
src/: db.rs  (+4 more)
(+6 files in other folders)
